@@ -169,7 +169,6 @@ sk_sp<SkImage> SkImage::makeTextureImage(Recorder* recorder,
 }
 
 sk_sp<TextureProxy> Image::MakePromiseImageLazyProxy(
-        Recorder* recorder,
         SkISize dimensions,
         TextureInfo textureInfo,
         Volatile isVolatile,
@@ -255,7 +254,7 @@ sk_sp<SkImage> SkImage::MakeGraphitePromiseTexture(
         GraphitePromiseImageContext imageContext) {
 
     // Our contract is that we will always call the _image_ release proc even on failure.
-    // We use the helper to convey the imageContext, so we need to ensure make doesn't fail.
+    // We use the helper to convey the imageContext, so we need to ensure Make doesn't fail.
     imageReleaseProc = imageReleaseProc ? imageReleaseProc : [](void*) {};
     auto releaseHelper = skgpu::RefCntedCallback::Make(imageReleaseProc, imageContext);
 
@@ -277,8 +276,7 @@ sk_sp<SkImage> SkImage::MakeGraphitePromiseTexture(
         return nullptr;
     }
 
-    sk_sp<TextureProxy> proxy = Image::MakePromiseImageLazyProxy(recorder,
-                                                                 dimensions,
+    sk_sp<TextureProxy> proxy = Image::MakePromiseImageLazyProxy(dimensions,
                                                                  textureInfo,
                                                                  isVolatile,
                                                                  fulfillProc,
