@@ -89,8 +89,7 @@ public:
 
     TextureProxyView textureProxyView() const { return fTextureProxyView; }
 
-    static sk_sp<TextureProxy> MakePromiseImageLazyProxy(Recorder*,
-                                                         SkISize dimensions,
+    static sk_sp<TextureProxy> MakePromiseImageLazyProxy(SkISize dimensions,
                                                          TextureInfo,
                                                          Volatile,
                                                          GraphitePromiseImageFulfillProc,
