@@ -17,6 +17,12 @@ Milestone 109
     line options `--colorfilter` or `--blender` if your program is a color-filter or a blender.
     A compile error will be printed to stdout if an error is found in the program.
   * The order of SkShader local matrix concatenation has been reversed. See skbug.com/13749
+  * PromiseImages have been added to Graphite. This supports both volatile and non-volatile Promise Images.
+    See the comment for SkImage::MakeGraphitePromiseTexture for more details.
+  * Graphite has loosened the immutability requirements of SkImages - through a new SkSurface API and careful
+    synchronization, clients can now mutate the backend object backing an SkImage. The new API consists of
+    SkSurface::asImage and SkSurface::makeImageCopy. We have a document that covers the expected use cases and
+    the synchronization required for each one.
 
 * * *
 
